# keops-vt

./: .gitignore  404.html  CHANGELOG.md  CNAME  LICENSE.md  README.md  ROADMAP.md  index.html  mkdocs.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  setuf.cfg  setup.cfg  setup.py  sitemap.xml  test.html
.github/: workflows.yaml
.github/workflows/: build.yaml  test_lint.yaml
docs/: CNAME  index.md
keops/: __init__.py  clip.py  debug.py  erase.py  info.py  main.py  shrink.py  size.py
keops/src/: mvt_clipper.py  mvt_debugger.py  mvt_eraser.py  mvt_info_getter.py  mvt_metrics_logger.py  mvt_optimizer.py  mvt_printer.py  mvt_reader.py  utils.py
keops_tiles.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
search/: search_index.json
src/: mvt_metrics_logger.py
src/keops/: mvt_clipper.py
tests/: test_erase.py  test_reader.py  test_utils.py
tests/fixtures/: sample_l.geojson  sample_p.geojson  trails.mbtiles
