[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "keops"
version = "0.0.1"
authors = [
  { name="Fran Martín", email="fmartinrivas2@gmail.com" },
]
description = "Python package for managing and editing Mapbox Vector Tiles in MBTiles format"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/fmariv/keops"
"Bug Tracker" = "https://github.com/fmariv/keops/issues"