[build-system]
requires = ["setuptools>=59.0"]
build-backend = "setuptools.build_meta"

[project]
name = "keops-vt"
version = "0.1.0"
authors = [
  { name="Fran Martín", email="fmartinrivas2@gmail.com" },
]
description = "CLI tool for custom edition and management of Mapbox Vector Tiles in MBTiles format"
readme = "README.md"
requires-python = ">=3.7"
keywords = ["mbtiles", "python", "vector-tiles"]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "mapbox-vector-tile~=1.2.1",
    "protobuf~=3.19.4",
    "geopandas~=0.12.1",
    "click~=8.1.3",
    "geojson~=2.5.0",
    "setuptools~=58.1.0",
    "docker~=6.0.1",
    "mkdocs~=1.4.1",
    "mkdocs-material~=9.1.0",
    "prettytable~=3.6.0",
    "halo~=0.0.31"
]

[project.scripts]
keops = "keops.main:main_group"

[project.urls]
"Homepage" = "https://github.com/fmariv/keops-vt"
"Bug Tracker" = "https://github.com/fmariv/keops-vt/issues"